# Voronoi_PCC_Analyser

./: .gitattributes  .gitignore  2Drandom_SpecialGrainBoundaries.txt  3sided_upd.txt  Approximation.ipynb  Data.ipynb  Data2.csv  Disorientations.ipynb  Dockerfile  Dockerfile_python_with_neper  Examples.ipynb  Experimental.ipynb  Experimental2.ipynb  Experimental3.ipynb  Paper_figures.ipynb  Plots.ipynb  README.md  Random_case.ipynb  Simulation.ipynb  Three_sided_examples.ipynb  characterise.py  cracks.txt  docker-compose.yaml  myscript.py  n5000-id10.tess  ndisangles.py  ndisorientquat.py  new_seeds.txt  pass1_model_2d.txt  pass1_model_edges_int_order.txt  pass1_model_edges_int_rand.txt  pipeline.sh  pyproject.toml  requirements.test.txt  requirements.txt  seq_edges.txt  sim2D.py  simulation.ipynb  simulation.py  sparsemat.py  (+10 more)
12_Octo_855cells/Voronoi/: A2.txt  B3.txt  nfrom_morpho-id1.stcell  voro_normals.txt  voro_seeds.txt
5k_cells_random_smax_old/: 2D_Random_tess_SpecialGrainBoundaries.txt  2D_Smax_tess_SpecialGrainBoundaries.txt  number_of_cells.txt
Cubic_1000cells/Delaunay/: AC3.txt  BC1.txt
Cubic_1000cells/Voronoi/: A2.txt  B3.txt  nfrom_morpho-id1.tess
Cubic_343cells/: L1.txt
Cubic_343cells/Delaunay/: AC2.txt  AC3.txt  BC2.txt
Cubic_343cells/Voronoi/: B1.txt  B3.txt  (+2 more)
DataECAP/: Data_13bins.txt  Data_13bins_ref.txt  Data_2bins.txt  Data_2bins_ref.txt  Data_32bins.txt  Data_32bins_ref.txt  Data_5bins.txt  Data_5bins_ref.txt  Data_63bins.txt  Data_63bins_ref.txt  all_means_100.json  all_stds_100.json  alloy.csv  alloy_upd2.csv
Voronoi_1000cells/: L1.txt
Voronoi_10cells/: L2.txt
Voronoi_500cells/: L1.txt  L2.txt
build-image/: initial-setup.sh
ddrx_results_copy/: p_vs_w.txt  results_1000_1.txt  results_100_10.txt
ddrx_results_copy_old/: results.txt  results500_10.txt  results_500_100.txt
example_notebooks/: Examples.ipynb
examples/: n100-id1.tess  n1000-id1.tess  n1582-id1-bunge.tess  n8-id1-2D.tess  n8-id1-3D.tess  pass1.tess
matgen/: __main__.py  base.py  characterise.py  complex.py  core.py  densemat.py  dynsimulation.py  entropic.py  matutils.py  ndisangles.py  ndisorientquat.py  representation.py  simulation.py  sparsemat.py  utils.py  visual.py
simul2D_2/: seeds.txt  seeds_initial.txt
tests/: test_base.py  test_core.py  test_sparsemat.py
tutorial/: Entropic.ipynb  Examples.ipynb
visual_old/: visual.py  visual_line.py
(+454 files in other folders)
