[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "PCCanalyser"
version = "0.0.1"
dependencies = [
    "numpy", "scipy", "tqdm", "jupyterlab", 
    "matplotlib", "bokeh",
]

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["."]  # ["."] by default
include = ["matgen"]  # ["*"] by default
exclude = []  # empty by default
namespaces = false  # true by default